[package]
name = "ip_stats"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# winapi = { version = "0.3.9", features = ["winsock2"] }
# socket2 = { version = "0.4.2", features = ["all"] }
anyhow = "1.0.44"
# byteorder = "1.4.3"
itertools = "0.10.1"
pnet = "0.28.0"
native-windows-gui = "1.0.12"
native-windows-derive = "1.0.4"
plotters = "0.3.1"
