[package]
name = "ip_packet_stat"
version = "1.0.1"
description = "An IPv4 packet statistics tool built with Winsock2"
repository = "https://github.com/HareInWeed/ip_packet_stat"
authors = ["HareInWeed"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.45"
itertools = "0.10.1"
chrono = "0.4.19"
clap = "3.0.0-beta.5"
winapi = { version = "0.3.9", features = ["winsock2", "mstcpip"] }
ipconfig = "0.2.2"
socket2 = { version = "0.4.2", features = ["all"] }
packet = "0.1.4"
byteorder = "1.4.3"
nom = "7.1.0"
nom-unicode = "0.3.0"
nwg = { version = "1.0.12", package = "native-windows-gui" }
nwd = { version = "1.0.4", package = "native-windows-derive" }
plotters = "0.3.1"

[build-dependencies]
embed-resource = "1.6.5"

[patch.crates-io]
nwg = { git = "https://github.com/HareInWeed/native-windows-gui", branch = "patch", package = "native-windows-gui" }
